🐞Fix : modify side nav bar's z-index to overwrap mainContentFixedHeader  when hamburger button is clicked in mobile env

--- a/src/components/navigation/navbar.module.css
+++ b/src/components/navigation/navbar.module.css
@@ -6,7 +6,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
-  /* z-index: 10; */
+  z-index: 15;
   position: relative;
   padding-top: 30px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 15px;
@@ -26,7 +26,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
-    z-index: 10;
+    z-index: 15;
     position: relative;
     padding-top: 30px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 15px;
